// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`after-jsx-generic.tsx format 1`] = `
====================================options=====================================
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
let comp = (
  <>
    <Component<number> /* comment1 */></Component>
    <Component<number> foo /* comment2 */></Component>
    <Component<number> /* comment3 */ bar></Component>
    <Component<number> foo /* comment4 */ bar></Component>

    <Component<number>
      // comment5
    ></Component>
    <Component<number>
      foo
      // comment6
    ></Component>
    <Component<number>
      // comment7
      foo
    ></Component>
    <Component<number>
      foo
      // comment8
      bar
    ></Component>
  </>
);

=====================================output=====================================
let comp = (
  <>
    <Component<number> /* comment1 */></Component>
    <Component<number> foo /* comment2 */></Component>
    <Component<number> /* comment3 */ bar></Component>
    <Component<number> foo /* comment4 */ bar></Component>

    <Component<number>
    // comment5
    ></Component>
    <Component<number>
      foo
      // comment6
    ></Component>
    <Component<number>
      // comment7
      foo
    ></Component>
    <Component<number>
      foo
      // comment8
      bar
    ></Component>
  </>
);

================================================================================
`;

exports[`jsx.tsx format 1`] = `
====================================options=====================================
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
var example1 = <div>
	https://test
</div>;

var example2 = <div>
	/*test*/
</div>;

=====================================output=====================================
var example1 = <div>https://test</div>;

var example2 = <div>/*test*/</div>;

================================================================================
`;

exports[`types.ts format 1`] = `
====================================options=====================================
parsers: ["typescript", "flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(() => {
  // swallow error and fallback to using directory as path
}) as string[];

=====================================output=====================================
(() => {
  // swallow error and fallback to using directory as path
}) as string[];

================================================================================
`;
